# StdCmkLibExportInitInstallLkAddInstProj

./: CMakeLists.txt
SRC/: README.md
StdCmkLibExportInitInstallLkAddInstProj_19.33.31630.0_install/lib/: mymathd.lib
StdCmkLibExportInitInstallLkAddInstProj_19.33.31630.0_install/lib/cmake/MyMath/: MyMathConfig.cmake  MyMathTargets-debug.cmake  MyMathTargets.cmake
